<?xml version="1.0" encoding="utf-8"?>
<!--
    MIT License

    Copyright (c) 2022-2023 SOPT Makers

    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all
    copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    SOFTWARE.
-->
<resources>
    <string name="app_name">SOPT</string>
    <string name="default_channel_id">SOPT_MESSAGE</string>
    <string name="main_content_header">SOPT를 알차게 즐기고 싶다면?</string>
    <string name="soptamp">SOPT AMP!</string>

    <!--    메인홈    -->
    <string name="main_title_non_member">안녕하세요,\nSOPT의 열정이 되어주세요!</string>
    <string name="main_non_member">비회원</string>
    <string name="main_title_member">%1$s 님은\nSOPT와 %2$s개월 째</string>
    <string name="main_title_inactive_member">안녕하세요,\nSOPT에 오신 것을 환영합니다!</string>
    <string name="main_subtitle_non_member">SOPT를 더 알고 싶다면, 둘러보세요</string>
    <string name="main_subtitle_member">더욱 편리해진 SOPT를 이용해보세요!</string>
    <string name="main_no_profile_member">비활동</string>
    <string name="main_inactive_member">%1$s기 수료</string>
    <string name="main_active_member">%1$s기 활동 중</string>
    <string name="main_additional_generation">+%1$s</string>

    <!-- 비회원 -->
    <string name="main_unauthenticated_large_block_official_page">SOPT\n공식홈페이지</string>
    <string name="main_unauthenticated_small_block_review">활동 후기</string>
    <string name="main_unauthenticated_small_block_review_description">진짜 후기가\n궁금하다면?</string>
    <string name="main_unauthenticated_small_block_project">프로젝트</string>
    <string name="main_unauthenticated_small_block_project_description">SOPT에서\n탄생한 프로젝트</string>
    <string name="main_unauthenticated_small_block_instagram">Instagram</string>
    <string name="main_unauthenticated_small_block_instagram_description">SOPT 소식 빠르게 확인하기</string>
    <string name="main_unauthenticated_small_block_youtube">Youtube</string>
    <string name="main_unauthenticated_small_block_youtube_description">SOPT 활동 구경하기</string>
    <string name="main_unauthenticated_small_block_faq">FAQ</string>
    <string name="main_unauthenticated_small_block_faq_description">자주 묻는 질문</string>

    <!-- 활동 -->
    <string name="main_active_large_block_attendance">출석하기</string>
    <string name="main_active_large_block_attendance_description">아 맞다, 출석!</string>
    <string name="main_active_small_block_crew">모임/스터디</string>
    <string name="main_active_small_block_crew_description">지금 열린 모임은?</string>
    <string name="main_active_small_block_member">멤버</string>
    <string name="main_active_small_block_member_description">궁금한 사람 찾아보기</string>
    <string name="main_active_small_block_project">프로젝트</string>
    <string name="main_active_small_block_project_description">역대 프로젝트 모아보기</string>
    <string name="main_active_small_block_official_page">공식홈페이지</string>
    <string name="main_active_small_block_official_page_description">솝트 홈페이지 바로보기</string>

    <!-- 비활동 -->
    <string name="main_inactive_large_block_crew">모임/스터디</string>
    <string name="main_inactive_large_block_crew_description">지금 열린 모임은?</string>
    <string name="main_inactive_small_block_member">멤버</string>
    <string name="main_inactive_small_block_member_description">궁금한 사람 찾아보기</string>
    <string name="main_inactive_small_block_project">프로젝트</string>
    <string name="main_inactive_small_block_project_description">지난 프로젝트 보기</string>
    <string name="main_inactive_small_block_official_page">공식홈페이지</string>
    <string name="main_inactive_small_block_instagram">Instagram</string>
    <string name="main_inactive_small_block_youtube">Youtube</string>

    <!--    출석    -->
    <string name="attendance">출석</string>
    <string name="title_attendance_count_normal">출석</string>
    <string name="title_attendance_count_late">지각</string>
    <string name="title_attendance_count_abnormal">결석</string>
    <string name="title_attendance_count_participate">참여</string>
    <string name="header_attendance_log">나의 출결 현황</string>
    <string name="text_not_awarded">출석점수를 체크하지 않습니다</string>
    <string name="attendance_progress_first">1차 출석</string>
    <string name="attendance_progress_second">2차 출석</string>
    <string name="attendance_progress_before">출석 전</string>
    <string name="attendance_progress_third_complete">출석완료!</string>
    <string name="attendance_progress_third_tardy">지각</string>
    <string name="attendance_progress_third_absent">결석</string>
    <string name="attendance_dialog_subtitle">출석 코드 다섯 자리를 입력해주세요.</string>
    <string name="attendance_dialog_error">코드가 일치하지 않아요!</string>
    <string name="attendance_dialog_button">출석하기</string>

    <!--    mypage    -->
    <string name="toolbar_mypage">마이페이지</string>
    <string name="mypage_service_info_title">서비스 이용 방침</string>
    <string name="mypage_private_info">개인정보 처리 방침</string>
    <string name="mypage_service_rule">서비스 이용약관</string>
    <string name="mypage_send_opinion">의견 보내기</string>
    <string name="mypage_notification_setting">알림 설정</string>
    <string name="mypage_notification">알림 설정하기</string>
    <string name="mypage_soptamp_setting_title">솝탬프 설정</string>
    <string name="mypage_adjust_sentence">한 마디 편집</string>
    <string name="mypage_change_nickname">닉네임 변경</string>
    <string name="mypage_reset_stamp">스탬프 초기화</string>
    <string name="mypage_etc_title">기타</string>
    <string name="mypage_log_out">로그아웃</string>
    <string name="mypage_sign_out">탈퇴하기</string>
    <string name="mypage_log_in">로그인</string>
    <string name="mypage_alert_soptamp_reset_title">미션을 초기화 하실건가요?</string>
    <string name="mypage_alert_soptamp_reset_subtitle">사진, 메모가 삭제되고\n전체 미션이 미완료상태로 초기화됩니다.</string>
    <string name="mypage_alert_soptamp_reset_positive">초기화</string>
    <string name="mypage_alert_soptamp_reset_negative">취소</string>
    <string name="mypage_alert_log_out_title">로그아웃</string>
    <string name="mypage_alert_log_out_subtitle">정말 로그아웃을 하실 건가요?</string>
    <string name="mypage_alert_log_out_positive">로그아웃</string>
    <string name="mypage_alert_log_out_negative">취소</string>

    <!--    탈퇴하기    -->
    <string name="toolbar_sign_out">탈퇴하기</string>
    <string name="sign_out_title">탈퇴 시 유의사항</string>
    <string name="sign_out_subtitle">회원 탈퇴를 신청하시면 해당 이메일은 즉시 탈퇴 처리됩니다.\n탈퇴 처리 시 계정 내에서 입력했던 정보는 영구적으로 삭제되며, 복구가 어렵습니다.</string>
    <string name="sign_out_button">탈퇴하기</string>

    <!--    닉네임 변경하기    -->
    <string name="toolbar_change_nickname">닉네임 변경</string>
    <string name="change_nickname_guide">한글/영문 10자 이하로 입력해주세요.</string>
    <string name="change_nickname_error">사용 중인 이름입니다.</string>
    <string name="change_nickname_button">닉네임 변경</string>

    <!--    한 마디 편집하기   -->
    <string name="toolbar_adjust_sentence">한 마디 편집</string>
    <string name="adjust_sentence_button">저장</string>

    <!--    알림   -->
    <string name="toolbar_notification">알림</string>
    <string name="toolbar_notification_read_all">모두 읽음</string>
    <string name="toolbar_notification_filter_all">전체 알림</string>
    <string name="toolbar_notification_filter_notice">공지</string>
    <string name="toolbar_notification_filter_news">소식</string>
    <string name="notification_history_empty_view">아직 도착한 알림이 없어요.</string>
    <string name="notification_history_news_detail">바로가기</string>
</resources>