<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?android:colorBackground"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/btn_arrow_left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/toolbar_change_nickname"
                android:textAppearance="?textAppearanceBodyLarge"
                android:textColor="?colorOnBackground"
                android:textSize="16sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/layout_edit_text_background"
        android:hint="@string/change_nickname_guide"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp"
        tools:enabled="false"
        android:textAppearance="?textAppearanceBodyLarge"
        android:textColor="@color/white_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_app_bar" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/change_nickname_error"
        android:textAppearance="?textAppearanceBodySmall"
        android:textColor="@color/red_100"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/edittext"
        app:layout_constraintTop_toBottomOf="@id/edittext"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginTop="52dp"
        android:background="@drawable/rectangle_radius_10"
        android:backgroundTint="@color/selector_button_state"
        android:textColor="@color/selector_button_text_color_state"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"
        android:text="@string/change_nickname_button"
        android:textAppearance="?textAppearanceHeadlineMedium"
        app:layout_constraintEnd_toEndOf="@id/edittext"
        app:layout_constraintStart_toStartOf="@id/edittext"
        app:layout_constraintTop_toBottomOf="@id/edittext" />
</androidx.constraintlayout.widget.ConstraintLayout>