<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.notification.NotificationHistoryActivity">

    <include
        android:id="@+id/include_appBarBackArrow"
        layout="@layout/include_app_bar_back_arrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView_readAll"
        style="?textAppearanceBodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:paddingHorizontal="4dp"
        android:paddingVertical="8dp"
        android:text="@string/toolbar_notification_read_all"
        android:textColor="@color/orange_100"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/include_appBarBackArrow"
        app:layout_constraintEnd_toEndOf="@id/include_appBarBackArrow"
        app:layout_constraintTop_toTopOf="@id/include_appBarBackArrow" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:chipSpacingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_appBarBackArrow"
        app:selectionRequired="true"
        app:singleLine="true"
        android:visibility="gone"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_all"
            style="@style/chip_notification_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layoutDirection="locale"
            android:text="@string/toolbar_notification_filter_all" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_notice"
            style="@style/chip_notification_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="locale"
            android:text="@string/toolbar_notification_filter_notice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_news"
            style="@style/chip_notification_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="locale"
            android:text="@string/toolbar_notification_filter_news" />

    </com.google.android.material.chip.ChipGroup>

    <include
        android:id="@+id/include_notificationHistoryEmptyView"
        layout="@layout/include_notification_history_empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup_filter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_notificationHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup_filter" />

</androidx.constraintlayout.widget.ConstraintLayout>